# cbzopen

./: README.md  go.mod  index.html.tmpl  main.go  pyproject.toml
.github/workflows/: ci.yml
src/cbzopen/: __init__.py  index.html
