[project]
name = "cbzopen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Enam Mijbah Noor" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cbzopen = "cbzopen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # Pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "G",        # flake8-logging-format
    "ASYNC",    # flake8-async
    "BLE",      # flake8-blind-except
    "C4",       # flake8-comprehensions
    "DTZ",      # flake8-datetimez
    "T10",      # flake8-debugger
    "ISC",      # flake8-implicit-str-concat
    "ICN",      # flake8-import-conventions
    "INP",      # flake8-no-pep420
    "RUF",      # Ruff-specific rules
]
